Shapes now show correctly on Firefox

--- a/css/nurd.less
+++ b/css/nurd.less
@@ -27,6 +27,9 @@
 .card-object-background-position-x(@color, @shape, @card-width) {
     background-position-x: 32 * (-3*@color - @shape) * (@card-width/128);
 }
+.card-object-background-position(@color, @shape, @shading, @card-width) {
+    background-position: (32 * (-3*@color - @shape) * (@card-width/128)) (32 * -@shading * (@card-width/128));
+}
 
 /* reset CSS: from http://meyerweb.com/eric/thoughts/2007/05/01/reset-reloaded/ */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; }
@@ -64,6 +67,7 @@ button { background: #e2e2e2; border: none; border-radius: 5px; cursor: pointer;
     background: -webkit-linear-gradient(top, #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%);
     .card-object { display: inline-block; margin:1px; .card-object-size(@card-width); }
     .card-object {
+        /*
         &.color0.shape0 { .card-object-background-position-x(0, 0, @card-width); }
         &.color0.shape1 { .card-object-background-position-x(0, 1, @card-width); }
         &.color0.shape2 { .card-object-background-position-x(0, 2, @card-width); }
@@ -73,9 +77,34 @@ button { background: #e2e2e2; border: none; border-radius: 5px; cursor: pointer;
         &.color2.shape0 { .card-object-background-position-x(2, 0, @card-width); }
         &.color2.shape1 { .card-object-background-position-x(2, 1, @card-width); }
         &.color2.shape2 { .card-object-background-position-x(2, 2, @card-width); }
-        &.shading1 { .card-object-background-position-y(1, @card-width); }
-        &.shading0 { .card-object-background-position-y(0, @card-width); }
-        &.shading2 { .card-object-background-position-y(2, @card-width);  }
+        */
+        &.color0.shape0.shading0 { .card-object-background-position(0, 0, 0, @card-width); }
+        &.color0.shape0.shading1 { .card-object-background-position(0, 0, 1, @card-width); }
+        &.color0.shape0.shading2 { .card-object-background-position(0, 0, 2, @card-width); }
+        &.color0.shape1.shading0 { .card-object-background-position(0, 1, 0, @card-width); }
+        &.color0.shape1.shading1 { .card-object-background-position(0, 1, 1, @card-width); }
+        &.color0.shape1.shading2 { .card-object-background-position(0, 1, 2, @card-width); }
+        &.color0.shape2.shading0 { .card-object-background-position(0, 2, 0, @card-width); }
+        &.color0.shape2.shading1 { .card-object-background-position(0, 2, 1, @card-width); }
+        &.color0.shape2.shading2 { .card-object-background-position(0, 2, 2, @card-width); }
+        &.color1.shape0.shading0 { .card-object-background-position(1, 0, 0, @card-width); }
+        &.color1.shape0.shading1 { .card-object-background-position(1, 0, 1, @card-width); }
+        &.color1.shape0.shading2 { .card-object-background-position(1, 0, 2, @card-width); }
+        &.color1.shape1.shading0 { .card-object-background-position(1, 1, 0, @card-width); }
+        &.color1.shape1.shading1 { .card-object-background-position(1, 1, 1, @card-width); }
+        &.color1.shape1.shading2 { .card-object-background-position(1, 1, 2, @card-width); }
+        &.color1.shape2.shading0 { .card-object-background-position(1, 2, 0, @card-width); }
+        &.color1.shape2.shading1 { .card-object-background-position(1, 2, 1, @card-width); }
+        &.color1.shape2.shading2 { .card-object-background-position(1, 2, 2, @card-width); }
+        &.color2.shape0.shading0 { .card-object-background-position(2, 0, 0, @card-width); }
+        &.color2.shape0.shading1 { .card-object-background-position(2, 0, 1, @card-width); }
+        &.color2.shape0.shading2 { .card-object-background-position(2, 0, 2, @card-width); }
+        &.color2.shape1.shading0 { .card-object-background-position(2, 1, 0, @card-width); }
+        &.color2.shape1.shading1 { .card-object-background-position(2, 1, 1, @card-width); }
+        &.color2.shape1.shading2 { .card-object-background-position(2, 1, 2, @card-width); }
+        &.color2.shape2.shading0 { .card-object-background-position(2, 2, 0, @card-width); }
+        &.color2.shape2.shading1 { .card-object-background-position(2, 2, 1, @card-width); }
+        &.color2.shape2.shading2 { .card-object-background-position(2, 2, 2, @card-width); }
     }
 }
 
